test/grammar/comprehension/list/invalid_loop_var_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:2:25
  |
2 | dataLoop = [i for i, j, k in data]  # error
  |                         ^ the number of loop variables is 3, which can only be 1 or 2
  |